--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <div class="panel reveal">
           <h3 style="margin-top:0">Let’s build safer systems</h3>
           <p>Send a message and I’ll respond with scope & next steps. For responsible disclosure, include minimal sensitive details and we’ll move to a secure channel.</p>
-          <div class="mono">email: <a href="mailto:hello@menhoudj.dev">hello@menhoudj.dev</a></div>
+          <div class="mono">email: <a href="mailto:menhoudjbdaltyf@gmail.com">menhoudjbdaltyf@gmail.com</a></div>
         </div>
         <form id="contactForm" class="panel reveal" style="transition-delay:.08s">
           <label for="name">Your Name</label>
