--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
           <a class="btn magnetic" href="#contact"><span class="shine"></span><i class="fa-solid fa-paper-plane"></i> Get in Touch</a>
         </div>
         <div class="socials reveal" style="transition-delay:.24s">
-          <a class="icon-btn" href="#" aria-label="Facebook" title="Facebook"><i class="fab fa-facebook-f"></i></a>
-          <a class="icon-btn" href="#" aria-label="Instagram" title="Instagram"><i class="fab fa-instagram"></i></a>
-          <a class="icon-btn" href="#" aria-label="YouTube" title="YouTube"><i class="fab fa-youtube"></i></a>
-          <a class="icon-btn" href="#" aria-label="GitHub" title="GitHub"><i class="fab fa-github"></i></a>
+          <a class="icon-btn" href="https://www.facebook.com/" aria-label="Facebook" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+          <a class="icon-btn" href="https://www.instagram.com/abdelatif7984/" aria-label="Instagram" title="Instagram"><i class="fab fa-instagram"></i></a>
+          <a class="icon-btn" href="https://www.youtube.com/@%D8%B9%D8%A8%D8%AF%D8%A7%D9%84%D8%B7%D9%8A%D9%81-%D9%8A5%D8%B8" aria-label="YouTube" title="YouTube"><i class="fab fa-youtube"></i></a>
+          <a class="icon-btn" href="https://github.com/menhoudj" aria-label="GitHub" title="GitHub"><i class="fab fa-github"></i></a>
         </div>
       </div>
       <div class="reveal" style="transition-delay:.28s">
